translate all text

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,9 @@
 {
+  "pagesNames": {
+    "createUser": "Create user",
+    "userList": "User list",
+    "login": "Login"
+  },
   "buttons": {
     "ok": "Ok",
     "cancel": "Cancel"
