--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -1,11 +1,14 @@
 {
   "pagesNames": {
     "createUser": "Создать пользователя",
-    "userList": "Список пользователей",
+    "userList": "Пользователи",
     "login": "Логин"
   },
   "buttons": {
     "ok": "Ок",
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "edit": "Редактировать",
+    "create": "Создать",
+    "remove": "Удалить"
   }
 }
