--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -19,5 +19,8 @@
       "updatedAt": "обновлен",
       "id": "id"
     }
-  }
+  },
+  "validateString": "не является строкой",
+  "validateNotMoreThan": "больше чем {{- value2}}",
+  "validateByPattern": "не следует паттерну {{key2}}: {{- value2}}"
 }
