add some client errors trsnslations

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -40,6 +40,8 @@
       "id": "id"
     }
   },
+  "required": "required",
+  "conflict": "already exists",
   "validateString": "is not a string",
   "validateNotMoreThan": "more than {{- value2}}",
   "validateByPattern": "does not match the {{key2}} pattern: {{- value2}}"
