--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -34,6 +34,8 @@
   "entities": {
     "user": {
       "name": "name",
+      "username": "username",
+      "password": "password",
       "email": "email",
       "createdAt": "created",
       "updatedAt": "updated",
