--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -34,6 +34,8 @@
   "entities": {
     "user": {
       "name": "имя",
+      "username": "имя пользователя",
+      "password": "пароль",
       "email": "email",
       "createdAt": "создан",
       "updatedAt": "обновлен",
