--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -42,9 +42,9 @@
       "id": "id"
     }
   },
-  "required": "required",
   "conflict": "already exists",
   "validateString": "is not a string",
   "validateNotMoreThan": "more than {{- value2}}",
+  "validateNotUndefined": "required",
   "validateByPattern": "does not match the {{key2}} pattern: {{- value2}}"
 }
