add loading area

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -42,7 +42,7 @@
       "id": "id"
     }
   },
-  "conflict": "already exists",
+  "P2002": "already exists",
   "validateString": "is not a string",
   "validateNotMoreThan": "more than {{- value2}}",
   "validateNotUndefined": "required",
