--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -44,8 +44,8 @@
   },
   "P2002": "уже существует",
   "searchByNameEmail": "Поиск по имени и email",
-  "validateString": "не является строкой",
-  "validateNotMoreThan": "больше чем {{- value2}}",
-  "validateNotUndefined": "обязательно",
-  "validateByPattern": "не следует паттерну {{key2}}: {{- value2}}"
+  "assertString": "не является строкой",
+  "assertNotMoreThan": "больше чем {{- value2}}",
+  "assertNotUndefined": "обязательно",
+  "assertByPattern": "не следует паттерну {{key2}}: {{- value2}}"
 }
