name to fullname

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -33,7 +33,7 @@
   },
   "entities": {
     "user": {
-      "name": "name",
+      "fullname": "name",
       "username": "username",
       "password": "password",
       "email": "email",
