--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -47,5 +47,8 @@
   "assertNotMoreThan": "more than {{- _input2}}",
   "assertNotUndefined": "required",
   "assertMatchPattern": "does not match the pattern: {{- _input2}}",
-  "assertMatchPattern/@.*\\.*./": "does not match email pattern"
+  "assertMatchPattern/@.*\\.*./": "does not match email pattern",
+  "assertMatchPattern/[A-Z]/": "must contain uppercase letter",
+  "assertMatchPattern/[a-z]/": "must contain lowercase letter",
+  "assertMatchPattern/[0-9]/": "must contain number"
 }
