--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -48,5 +48,8 @@
   "assertNotMoreThan": "больше чем {{- _input2}}",
   "assertNotUndefined": "обязательно",
   "assertMatchPattern": "не следует паттерну: {{- _input2}}",
-  "assertMatchPattern/@.*\\.*./": "введенный текст не является email"
+  "assertMatchPattern/@.*\\.*./": "введенный текст не является email",
+  "assertMatchPattern/[A-Z]/": "должен содержать символ в верхнем регистре",
+  "assertMatchPattern/[a-z]/": "должен содержать символ в нижнем регистре",
+  "assertMatchPattern/[0-9]/": "должен содержать цифру"
 }
