add form constructor and tree panel

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -2,7 +2,8 @@
   "pagesNames": {
     "createUser": "Create user",
     "userList": "Users",
-    "login": "Login"
+    "login": "Login",
+    "formConstructor": "Form constructor"
   },
   "userPage": {
     "searchByNameEmail": "Search by name or email",
