--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -1,4 +1,7 @@
 {
+  "fieldNames": {
+    "name": "имя"
+  },
   "pagesNames": {
     "createUser": "Создать пользователя",
     "userList": "Пользователи",
