--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -72,6 +72,10 @@
   "assertMatchPattern/[A-Z]/": "должен содержать символ в верхнем регистре",
   "assertMatchPattern/[a-z]/": "должен содержать символ в нижнем регистре",
   "assertMatchPattern/[0-9]/": "должен содержать цифру",
+  "assertMatchPattern@.*\\.*.": "введенный текст не является email",
+  "assertMatchPattern[A-Z]": "должен содержать символ в верхнем регистре",
+  "assertMatchPattern[a-z]": "должен содержать символ в нижнем регистре",
+  "assertMatchPattern[0-9]": "должен содержать цифру",
 
   "assertIgnorePattern/\\W+/": "может содержать только буквы и <nobr>символы\"_\"</nobr>",
 
