--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -4,7 +4,8 @@
     "saved": "Saved"
   },
   "fieldNames": {
-    "name": "name"
+    "name": "name",
+    "title": "title"
   },
   "pagesNames": {
     "createUser": "Create user",
