contextual menu refactoring

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -22,7 +22,8 @@
   },
   "formConstructorPage": {
     "bindings": "Bindings",
-    "addBindings": "Add bindings"
+    "addBindings": "Add bindings",
+    "editThisForm": "Edit this form"
   },
   "buttons": {
     "add": "Add",
