--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,140 +1,148 @@
 {
-  "locale": "en-US",
-  "messages": {
-    "saved": "Saved"
-  },
-  "fieldNames": {
-    "name": "name",
-    "title": "title"
-  },
-  "pagesNames": {
-    "createUser": "Create user",
-    "userList": "Users",
-    "login": "Login",
-    "formConstructor": "Form constructor"
-  },
-  "userPage": {
-    "searchByNameEmail": "Search by name or email",
-    "createUser": "Create user",
-    "editUser": "Edit user",
-    "users": "users",
-    "pages": "pages"
-  },
-  "formConstructorPage": {
-    "bindings": "Bindings",
-    "addBindings": "Add bindings",
-    "editThisForm": "Edit this form"
-  },
-  "buttons": {
-    "add": "Add",
-    "ok": "Ok",
-    "cancel": "Cancel",
-    "save": "Save",
-    "saving": "Saving...",
-    "toggleSelection": "Toggle selection",
-    "toggleSelectionForAll": "Toggle selection for all items",
-    "edit": "Edit",
-    "create": "Create",
-    "filter": "Filter",
-    "close": "Close",
-    "remove": "Remove",
-    "logout": "Logout",
-    "login": "Login"
-  },
-  "pagination": {
-    "firstPage": "Go to the first page",
-    "previousPage": "Go to the previous page",
-    "currentPage": "Current page",
-    "nextPage": "Go to the next page",
-    "lastPage": "Go to the last page"
-  },
-  "entities": {
-    "user": {
-      "fullname": "name",
-      "username": "username",
-      "password": "password",
-      "email": "email",
-      "createdAt": "created",
-      "updatedAt": "updated",
-      "id": "id"
+  "t": {
+    "locale": "en-US",
+    "messages": {
+      "saved": "Saved"
+    },
+    "labels": {
+      "field": "field",
+      "main": "main",
+      "name": "name",
+      "styles": "styles",
+      "style": "styles",
+      "props": "props",
+      "layout": "layout",
+      "title": "title"
+    },
+    "pagesNames": {
+      "createUser": "Create user",
+      "userList": "Users",
+      "login": "Login",
+      "formConstructor": "Form constructor"
+    },
+    "userPage": {
+      "searchByNameEmail": "Search by name or email",
+      "createUser": "Create user",
+      "editUser": "Edit user",
+      "users": "users",
+      "pages": "pages"
+    },
+    "formConstructorPage": {
+      "bindings": "Bindings",
+      "addBindings": "Add bindings",
+      "editThisForm": "Edit this form"
+    },
+    "buttons": {
+      "add": "Add",
+      "ok": "Ok",
+      "cancel": "Cancel",
+      "save": "Save",
+      "saving": "Saving...",
+      "toggleSelection": "Toggle selection",
+      "toggleSelectionForAll": "Toggle selection for all items",
+      "edit": "Edit",
+      "create": "Create",
+      "filter": "Filter",
+      "close": "Close",
+      "remove": "Remove",
+      "logout": "Logout",
+      "login": "Login"
+    },
+    "pagination": {
+      "firstPage": "Go to the first page",
+      "previousPage": "Go to the previous page",
+      "currentPage": "Current page",
+      "nextPage": "Go to the next page",
+      "lastPage": "Go to the last page"
+    },
+    "entities": {
+      "user": {
+        "fullname": "name",
+        "username": "username",
+        "password": "password",
+        "email": "email",
+        "createdAt": "created",
+        "updatedAt": "updated",
+        "id": "id"
+      }
+    },
+    "unknownError": "Unknown error",
+    "serverInvalidData": "Received invalid data from server",
+
+    "P2002": "already exists",
+    "assertString": "required",
+    "assertNotMoreThan": "more than {{- _input2}}",
+    "assertNotUndefined": "required",
+
+    "assertMatchPattern": "does not match the pattern: {{- _input2}}",
+    "assertMatchPattern/@.*\\.*./": "does not match email pattern",
+    "assertMatchPattern/[A-Z]/": "must contain uppercase letter",
+    "assertMatchPattern/[a-z]/": "must contain lowercase letter",
+    "assertMatchPattern/[0-9]/": "must contain number",
+    "assertMatchPattern@.*\\.*.": "does not match email pattern",
+    "assertMatchPattern[A-Z]": "must contain uppercase letter",
+    "assertMatchPattern[a-z]": "must contain lowercase letter",
+    "assertMatchPattern[0-9]": "must contain number",
+
+    "FORM": "form",
+    "PRESET": "preset",
+    "COMP": "component",
+
+    "assertIgnorePattern/\\W+/": "can contain only symbols \u003Cnobr\u003Eand \"_\"\u003C/nobr\u003E",
+
+    "calendar": {
+      "firstDayOfTheWeek": 0,
+      "months": {
+        "January": "January",
+        "February": "February",
+        "March": "March",
+        "April": "April",
+        "May": "May",
+        "June": "June",
+        "July": "July",
+        "August": "August",
+        "September": "September",
+        "October": "October",
+        "November": "November",
+        "December": "December"
+      },
+      "shortMonths": {
+        "Jan": "Jan",
+        "Feb": "Feb",
+        "Mar": "Mar",
+        "Apr": "Apr",
+        "May": "May",
+        "Jun": "Jun",
+        "Jul": "Jul",
+        "Aug": "Aug",
+        "Sep": "Sep",
+        "Oct": "Oct",
+        "Nov": "Nov",
+        "Dec": "Dec"
+      },
+      "days": {
+        "Sunday": "Sunday",
+        "Monday": "Monday",
+        "Tuesday": "Tuesday",
+        "Wednesday": "Wednesday",
+        "Thursday": "Thursday",
+        "Friday": "Friday",
+        "Saturday": "Saturday"
+      },
+      "shortDays": {
+        "Sunday": "S",
+        "Monday": "M",
+        "Tuesday": "T",
+        "Wednesday": "W",
+        "Thursday": "T",
+        "Friday": "F",
+        "Saturday": "S"
+      },
+      "goToToday": "Go to today",
+      "prevMonthAriaLabel": "Go to previous month",
+      "nextMonthAriaLabel": "Go to next month",
+      "prevYearAriaLabel": "Go to previous year",
+      "nextYearAriaLabel": "Go to next year"
     }
-  },
-  "unknownError": "Unknown error",
-  "serverInvalidData": "Received invalid data from server",
-
-  "P2002": "already exists",
-  "assertString": "required",
-  "assertNotMoreThan": "more than {{- _input2}}",
-  "assertNotUndefined": "required",
-
-  "assertMatchPattern": "does not match the pattern: {{- _input2}}",
-  "assertMatchPattern/@.*\\.*./": "does not match email pattern",
-  "assertMatchPattern/[A-Z]/": "must contain uppercase letter",
-  "assertMatchPattern/[a-z]/": "must contain lowercase letter",
-  "assertMatchPattern/[0-9]/": "must contain number",
-  "assertMatchPattern@.*\\.*.": "does not match email pattern",
-  "assertMatchPattern[A-Z]": "must contain uppercase letter",
-  "assertMatchPattern[a-z]": "must contain lowercase letter",
-  "assertMatchPattern[0-9]": "must contain number",
-
-  "FORM": "form",
-  "PRESET": "preset",
-  "COMP": "component",
-
-  "assertIgnorePattern/\\W+/": "can contain only symbols \u003Cnobr\u003Eand \"_\"\u003C/nobr\u003E",
-
-  "calendar": {
-    "firstDayOfTheWeek": 0,
-    "months": {
-      "January": "January",
-      "February": "February",
-      "March": "March",
-      "April": "April",
-      "May": "May",
-      "June": "June",
-      "July": "July",
-      "August": "August",
-      "September": "September",
-      "October": "October",
-      "November": "November",
-      "December": "December"
-    },
-    "shortMonths": {
-      "Jan": "Jan",
-      "Feb": "Feb",
-      "Mar": "Mar",
-      "Apr": "Apr",
-      "May": "May",
-      "Jun": "Jun",
-      "Jul": "Jul",
-      "Aug": "Aug",
-      "Sep": "Sep",
-      "Oct": "Oct",
-      "Nov": "Nov",
-      "Dec": "Dec"
-    },
-    "days": {
-      "Sunday": "Sunday",
-      "Monday": "Monday",
-      "Tuesday": "Tuesday",
-      "Wednesday": "Wednesday",
-      "Thursday": "Thursday",
-      "Friday": "Friday",
-      "Saturday": "Saturday"
-    },
-    "shortDays": {
-      "Sunday": "S",
-      "Monday": "M",
-      "Tuesday": "T",
-      "Wednesday": "W",
-      "Thursday": "T",
-      "Friday": "F",
-      "Saturday": "S"
-    },
-    "goToToday": "Go to today",
-    "prevMonthAriaLabel": "Go to previous month",
-    "nextMonthAriaLabel": "Go to next month",
-    "prevYearAriaLabel": "Go to previous year",
-    "nextYearAriaLabel": "Go to next year"
   }
 }
