--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -84,9 +84,12 @@
     "assertMatchPattern[a-z]": "must contain lowercase letter",
     "assertMatchPattern[0-9]": "must contain number",
 
-    "FORM": "form",
-    "PRESET": "preset",
-    "COMP": "component",
+    "schemaTypes": {
+      "FORM": "form",
+      "FORM_DIMENSION": "dimension",
+      "PRESET": "preset",
+      "COMP": "component"
+    },
 
     "assertIgnorePattern/\\W+/": "can contain only symbols \u003Cnobr\u003Eand \"_\"\u003C/nobr\u003E",
 
