--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -74,9 +74,12 @@
     "assertNotMoreThan": "больше чем {{- _input2}}",
     "assertNotUndefined": "обязательно",
 
-    "FORM": "форма",
-    "PRESET": "пресет",
-    "COMP": "компонент",
+    "schemaTypes": {
+      "FORM": "форма",
+      "FORM_DIMENSION": "дименшены",
+      "PRESET": "пресет",
+      "COMP": "компонент"
+    },
 
     "assertMatchPattern": "не следует паттерну: {{- _input2}}",
     "assertMatchPattern/@.*\\.*./": "введенный текст не является email",
