remove action buttons

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -34,6 +34,7 @@
     },
     "buttons": {
       "add": "Добавить",
+      "back": "Назад",
       "ok": "Ок",
       "cancel": "Отмена",
       "edit": "Редактировать",
