--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -34,6 +34,7 @@
     },
     "buttons": {
       "add": "Add",
+      "back": "Back",
       "ok": "Ok",
       "cancel": "Cancel",
       "save": "Save",
