add buttons to header-content

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -43,6 +43,7 @@
       "toggleSelectionForAll": "Toggle selection for all items",
       "edit": "Edit",
       "create": "Create",
+      "delete": "Delete",
       "filter": "Filter",
       "close": "Close",
       "remove": "Remove",
