--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -39,6 +39,7 @@
       "cancel": "Отмена",
       "edit": "Редактировать",
       "create": "Создать",
+      "delete": "Удалить",
       "save": "Сохранить",
       "saving": "Сохраняется...",
       "toggleSelection": "Переключить выделение",
