--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -150,5 +150,8 @@
       "prevYearAriaLabel": "К предыдущему году",
       "nextYearAriaLabel": "К следующему году"
     }
+  },
+  "errors": {
+    "responseNot200": "Server has returned error!"
   }
 }
