--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -149,5 +149,8 @@
       "prevYearAriaLabel": "Go to previous year",
       "nextYearAriaLabel": "Go to next year"
     }
+  },
+  "errors": {
+    "responseNot200": "Server has returned error!"
   }
 }
