--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -38,6 +38,7 @@
       "ok": "Ok",
       "cancel": "Cancel",
       "save": "Save",
+      "done": "Done",
       "saving": "Saving...",
       "toggleSelection": "Toggle selection",
       "toggleSelectionForAll": "Toggle selection for all items",
