--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -41,6 +41,7 @@
       "create": "Создать",
       "delete": "Удалить",
       "save": "Сохранить",
+      "done": "Готово",
       "saving": "Сохраняется...",
       "toggleSelection": "Переключить выделение",
       "toggleSelectionForAll": "Переключить выделение для всего списка",
